<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>

    <string name="title_name">My Nanodegree Apps!</string>
    <string name="name_bt_fir">Spotify Streamer</string>
    <string name="name_bt_sec">SCORES APP</string>
    <string name="name_bt_thi">LIBRARY APP</string>
    <string name="name_bt_fou">BUILD IT BIGGER</string>
    <string name="name_bt_fif">XYZ READER</string>
    <string name="name_bt_six">CAPSTONE:MINE ONLY APP</string>
</resources>
